--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,31 @@
+<h1><%= @post.title %></h1>
+<p>Filed under <%= @post.categories.map(&:name).join(" * ") %></p>
 
+<p><%= @post.content %></p>
+
+
+<h4>Commenters:</h4>
+<ul>
+  <% @post.users.distinct.each do |user| %>
+    <li><%= link_to user.username, user %></li>
+  <% end %>
+</ul>
+
+<h4>Comments:</h4>
+
+<% @post.comments.each do |comment| %>
+  <p><%= comment.user.username %> says: <%= comment.content %></p>
+<% end %>
+
+<% # NO @ below - have to make user first %>
+<%= form_for @post.comments.build do |f| %>
+  <%= f.text_field :content %>
+  <%= f.hidden_field :post_id, value: @post.id %>
+  <%= f.collection_select :user_id, User.all, :id, :username %>
+
+  <%= f.fields_for :user, @post.comments.last.build_user do |user_fields| %>
+    <%= user_fields.text_field :username %>
+  <% end %>
+
+  <%= f.submit %>
+<% end %>
