--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,32 @@
+<h1><%= @post.title %></h1><br>
+<h2><%= @post.content %> </h2>
 
+<ul>
+  <% @post.categories.each do |c| %>
+    <li><%= c.name %></li>
+  <% end %>
+</ul>
+
+<ul>
+  <% @post.comments.each do |c| %>
+    <li><%=c.user.username%> says: <%= c.content %></li>
+  <% end %>
+</ul>
+
+<ul>
+  <%users = @post.comments.map{|c| c.user}.uniq %>
+  <% users.each do |u| %>
+    <li><%=link_to u.username, user_path(u) %></li>
+  <% end %>
+</ul>
+
+<%= form_for @post.comments.build do |f| %>
+ <%= f.label "Content" %>
+ <%= f.text_field :content %>
+ <%= f.collection_select :user_id, User.all, :id, :username, include_blank: 'Choose a User' %>
+ <%= f.hidden_field :post_id %>
+ <%= f.fields_for :user, @post.comments.last.build_user do |user_fields| %>
+   <%= user_fields.text_field :username %>
+ <% end %>
+ <%= f.submit %>
+<% end %>
