--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,19 @@
-
+<div class=post-content>
+  <h1><%= @post.content %></h1>
+</div>
+<%= form_for(@post) do |f| %>
+<p>
+  <%= f.label "Title" %>
+  <%= f.text_field :title %><br>
+</p>
+<p>
+  <%= f.label "Content" %><br>
+  <%= f.text_area :content %><br>
+</p>
+  <%= f.label "Category" %><br>
+  <%=f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  <%=f.fields_for :categories, @post.categories.build do |categories_fields|%>
+  <%=categories_fields.text_field :name%>
+  <%end%><br><br>
+  <%= f.submit %>
+<% end %>
